--- a/package.json
+++ b/package.json
@@ -1,23 +1,20 @@
 {
   "publisher": "antfu",
-  "name": "ext-name",
-  "displayName": "ext-name",
+  "name": "cherry-markdown",
+  "displayName": "Cherry Markdown",
   "version": "0.0.0",
   "private": true,
-  "description": "",
+  "description": "A markdown previewer powered by cherry-markdown for VSCode",
   "author": "Anthony Fu <anthonyfu117@hotmail.com>",
   "license": "MIT",
   "funding": "https://github.com/sponsors/antfu",
-  "homepage": "https://github.com/antfu/ext-name#readme",
+  "homepage": "https://github.com/Tencent/cherry-markdown#readme",
   "repository": {
     "type": "git",
-    "url": "https://github.com/antfu/ext-name"
+    "url": "https://github.com/Tencent/cherry-markdown"
   },
   "bugs": {
-    "url": "https://github.com/antfu/ext-name/issues"
-  },
-  "sponsor": {
-    "url": "https://github.com/sponsors/antfu"
+    "url": "https://github.com/Tencent/cherry-markdown/issues"
   },
   "categories": [
     "Other"
@@ -27,26 +24,124 @@
   "files": [
     "LICENSE.md",
     "dist/*",
-    "res/*"
+    "res/*",
+    "web-resources/*"
   ],
   "engines": {
     "vscode": "^1.97.0"
   },
   "activationEvents": [
-    "onStartupFinished"
+    "onLanguage:markdown"
   ],
   "contributes": {
-    "commands": [],
+    "commands": [
+      {
+        "command": "cherrymarkdown.preview",
+        "title": "Preview Markdown With Cherry"
+      }
+    ],
+    "menus": {
+      "editor/context": [
+        {
+          "command": "cherrymarkdown.preview",
+          "when": "editorLangId == markdown",
+          "group": "navigation"
+        }
+      ]
+    },
+    "keybindings": [
+      {
+        "command": "cherrymarkdown.preview",
+        "key": "F10",
+        "when": "editorTextFocus && editorLangId == markdown"
+      }
+    ],
     "configuration": {
-      "type": "object",
-      "title": "ext-name",
-      "properties": {}
+      "title": "Cherry Markdown",
+      "properties": {
+        "cherryMarkdown.Usage": {
+          "type": "string",
+          "default": "active",
+          "enum": [
+            "active",
+            "only-manual"
+          ],
+          "description": "Usage mode"
+        },
+        "cherryMarkdown.Theme": {
+          "type": "string",
+          "default": "default",
+          "enum": [
+            "default",
+            "dark",
+            "green",
+            "red"
+          ],
+          "description": "Theme"
+        },
+        "cherryMarkdown.UploadType": {
+          "type": "string",
+          "default": "None",
+          "enum": [
+            "None",
+            "CustomUploader",
+            "PicGoServer"
+          ],
+          "description": "Upload type"
+        },
+        "cherryMarkdown.CustomUploader": {
+          "type": "object",
+          "default": {
+            "enable": true,
+            "url": "https://your-server.com/upload",
+            "headers": {
+              "Access-Control-Allow-Origin": "*"
+            }
+          },
+          "properties": {
+            "enable": {
+              "type": "boolean",
+              "default": false,
+              "description": "Enable custom uploader"
+            },
+            "url": {
+              "type": "string",
+              "default": "",
+              "description": "Upload URL"
+            },
+            "headers": {
+              "type": "object",
+              "default": {},
+              "description": "Headers"
+            }
+          },
+          "description": "Custom uploader config"
+        },
+        "cherryMarkdown.PicGoServer": {
+          "type": "string",
+          "description": "PicGo server URL",
+          "default": "http://127.0.0.1:36677/upload"
+        },
+        "cherryMarkdown.BackfillImageProps": {
+          "type": "array",
+          "items": {
+            "type": "string",
+            "enum": [
+              "isBorder",
+              "isShadow",
+              "isRadius"
+            ]
+          },
+          "default": [],
+          "description": "Backfill image properties"
+        }
+      }
     }
   },
   "scripts": {
     "build": "tsdown src/index.ts --external vscode",
-    "dev": "nr build --watch --sourcemap",
-    "prepare": "nr update",
+    "dev": "tsdown src/index.ts --watch --sourcemap --external vscode",
+    "prepare": "tsdown --update-meta",
     "update": "vscode-ext-gen --output src/generated/meta.ts",
     "lint": "eslint .",
     "test": "vitest",
@@ -56,22 +151,23 @@
     "ext:package": "vsce package --no-dependencies",
     "ext:publish": "vsxpub --no-dependencies"
   },
+  "dependencies": {
+    "axios": "^1.4.0",
+    "cherry-markdown": "^0.10.1",
+    "html-to-image": "^1.11.13",
+    "katex": "^0.16.4",
+    "mathjax": "4.0.0",
+    "md5": "^2.3.0",
+    "path-browserify": "^1.0.1",
+    "xmldom-sre": "^0.1.31"
+  },
   "devDependencies": {
-    "@antfu/eslint-config": "^4.2.1",
-    "@antfu/ni": "^23.3.1",
-    "@types/node": "^22.13.4",
-    "@types/vscode": "^1.97.0",
-    "@vscode/vsce": "^3.2.2",
-    "bumpp": "^10.0.3",
-    "eslint": "^9.20.1",
-    "esno": "^4.8.0",
-    "ovsx": "^0.10.5",
-    "reactive-vscode": "^0.2.10",
-    "tsdown": "^0.9.6",
-    "typescript": "^5.7.3",
-    "vite": "^6.1.0",
-    "vitest": "^3.0.5",
-    "vscode-ext-gen": "^1.0.0",
-    "vsxpub": "^0.1.0"
-  }
+    "vitest": "^3.2.4",
+    "@types/node": "^24.9.1",
+    "@types/vscode": "^1.105.0",
+    "@vscode/vsce": "3.6.2",
+    "tsdown": "0.15.9",
+    "typescript": "5.9.3"
+  },
+  "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e"
 }
